--- a/trackdrivenewapi.html
+++ b/trackdrivenewapi.html
@@ -12,15 +12,15 @@
   <form id="leadForm">
     <div class="form-group">
       <label for="first_name">First Name</label>
-      <input type="text" class="form-control" id="first_name" name="first_name" required>
+      <input type="text" class="form-control" id="first_name" name="first_name" placeholder="First name" required>
     </div>
     <div class="form-group">
       <label for="last_name">Last Name</label>
-      <input type="text" class="form-control" id="last_name" name="last_name" required>
+      <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Last name" required>
     </div>
     <div class="form-group">
       <label for="phone_home">Phone</label>
-      <input type="text" class="form-control" id="caller_id"  required>
+      <input type="text" class="form-control" id="caller_id" placeholder="7105386420" required>
     </div>
     <div class="form-group">
       <label for="address">DOB Month</label>
@@ -37,11 +37,11 @@
  
     <div class="form-group">
       <label for="state">State</label>
-      <input type="text" class="form-control" id="state" name="state" required>
+      <input type="text" class="form-control" id="state" name="state" placeholder="CA, AK" required>
     </div>
     <div class="form-group">
       <label for="zip_code">Zip Code</label>
-      <input type="text" class="form-control" id="zip" name="zip_code" required>
+      <input type="text" class="form-control" id="zip" name="zip_code" placeholder="5 digits zipcode" required>
     </div>
  
   
