--- a/trackdrivenewapi.html
+++ b/trackdrivenewapi.html
@@ -24,15 +24,15 @@
     </div>
     <div class="form-group">
       <label for="address">DOB Month</label>
-      <input type="text" class="form-control" id=“dob_mm” name="address" placeholder=“12” required>
+      <input type="text" class="form-control" id="dob_mm" name="address" placeholder=“12” required>
     </div>
  <div class="form-group">
       <label for="address">DOB Day</label>
-      <input type="text" class="form-control" id="dob_dd” name="address2" placeholder=“21” required>
+      <input type="text" class="form-control" id="dob_dd" name="address2" placeholder=“21” required>
     </div>
 <div class="form-group">
       <label for="address"> DOB YEAR</label>
-      <input type="text" class="form-control" id="dob_yyyy” name="address2" placeholder=“1995” required>
+      <input type="text" class="form-control" id="dob_yyyy" name="address2" placeholder=“1995” required>
     </div>
  
     <div class="form-group">
