--- a/eSubmissionFormTD.html
+++ b/eSubmissionFormTD.html
@@ -33,6 +33,10 @@
       <input type="date" class="form-control" id="dob" name="dob" required>
     </div>
     <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" class="form-control" id="email" name="email" placeholder="john@example.com" required>
+    </div>
+    <div class="form-group">
       <label for="state">State</label>
       <input type="text" class="form-control" id="state" name="state" placeholder="Enter state abbreviation" required>
     </div>
