Update and rename C4C.html to ACA_Submission_formJ.html

--- a/ACA_Submission_formJ.html
+++ b/ACA_Submission_formJ.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>C4C Lead Submission Form R</title>
+  <title>ACA Submission form/title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container mt-5">
-    <h2>Lead Submission Form R</h2>
+    <h2>ACA Submission form</h2>
     <form id="leadForm">
       <div class="form-row">
         <div class="form-group col-md-6">
