Update and rename RingbaDID6_ApiPostingnew.html to KACADID6_postingForm.html

--- a/KACADID6_postingForm.html
+++ b/KACADID6_postingForm.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>DID6 API POSTING FORM</title>
+  <title>K ACA DID6 API POSTING FORM</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     .form-group {
@@ -10,11 +10,11 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">DID 6 Campaign 6 POSTING FORM</h2>
+    <h2 class="text-center">K ACA DID 6 Campaign 6 POSTING FORM</h2>
     <form id="leadForm">
      
       <div class="form-group">
-        <label for="caller_id">Phone (ex: 7123456789)</label>
+        <label for="caller_id">Phone (ex: 5128473295)</label>
         <input type="text" class="form-control" id="caller_id" placeholder="Phone">
       </div>
 
