--- a/TaskstatusUpdate.html
+++ b/TaskstatusUpdate.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -27,43 +26,34 @@ function submitForm() {
         body: JSON.stringify(data)
     })
     .then(response => {
-        if (response.ok || response.status == 201 || response.status == 200) {
-		task_idSubmission(task_id);
-            // Enable submit button after successful response
-            document.getElementById("submitBtn").disabled = false;
-            // Display success message using Bootstrap alert
+        if (response.status == 200) {
+            // Show success message
             $('#successAlert').html('<div class="alert alert-success alert-dismissible fade show" role="alert">Status posted successfully</div>');
             // Hide success message after 3 seconds
             setTimeout(function() {
                 $('.alert').alert('close');
-            }, 10000);
+            }, 3000);
+            // Call task_idSubmission function
+            task_idSubmission(task_id);
         }
-        return response.json();
-    })
-    .then(data => {
-        // Display response on the screen
-        document.getElementById("response").innerText = JSON.stringify(data, null, 2);
+        // Enable submit button after response
+        document.getElementById("submitBtn").disabled = false;
     })
     .catch(error => {
         console.error('Error:', error);
         // Enable submit button in case of error
         document.getElementById("submitBtn").disabled = false;
-        // Display error message on the screen
-        document.getElementById("response").innerText = "An error occurred. Please try again.";
-    });}
-function task_idSubmission(taskid) {
-  try {
-    fetch('https://pinnacledebtrelief.com/insert_task.php?task_id='+taskid
-, {
-      method: 'GET',
-      mode: 'no-cors'
     });
-  } catch (error) {
-    
-  }
-
 }
 
+function task_idSubmission(taskid) {
+    fetch('https://pinnacledebtrelief.com/insert_task.php?task_id=' + taskid, {
+        method: 'GET',
+        mode: 'no-cors'
+    }).catch(error => {
+        console.error('Error:', error);
+    });
+}
 </script>
 </head>
 <body>
