--- a/TaskstatusUpdate.html
+++ b/TaskstatusUpdate.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -18,41 +19,35 @@ function submitForm() {
     // Disable submit button to prevent multiple submissions
     document.getElementById("submitBtn").disabled = true;
 
-    fetch('https://callback.textback.ai/jornaya/task/status', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
-    })
-    .then(response => {
-        if (response.status == 200) {
-            // Show success message
-            $('#successAlert').html('<div class="alert alert-success alert-dismissible fade show" role="alert">Status posted successfully</div>');
-            // Hide success message after 3 seconds
-            setTimeout(function() {
-                $('.alert').alert('close');
-            }, 3000);
-            // Call task_idSubmission function
-            task_idSubmission(task_id);
+    var xhr = new XMLHttpRequest();
+    xhr.open("POST", 'https://corsproxy.io/?https://callback.textback.ai/jornaya/task/status', true);
+    xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+
+    xhr.onreadystatechange = function () {
+        if (xhr.readyState === XMLHttpRequest.DONE) {
+            if (xhr.status === 200) {
+                // Show success message
+                $('#successAlert').html('<div class="alert alert-success alert-dismissible fade show" role="alert">Status posted successfully</div>');
+                // Hide success message after 3 seconds
+                setTimeout(function() {
+                    $('.alert').alert('close');
+                }, 3000);
+                // Call task_idSubmission function
+                task_idSubmission(task_id);
+            }
+            // Enable submit button after response
+            document.getElementById("submitBtn").disabled = false;
         }
-        // Enable submit button after response
-        document.getElementById("submitBtn").disabled = false;
-    })
-    .catch(error => {
-        console.error('Error:', error);
-        // Enable submit button in case of error
-        document.getElementById("submitBtn").disabled = false;
-    });
+    };
+
+    xhr.send(JSON.stringify(data));
 }
 
 function task_idSubmission(taskid) {
-    fetch('https://pinnacledebtrelief.com/insert_task.php?task_id=' + taskid, {
-        method: 'GET',
-        mode: 'no-cors'
-    }).catch(error => {
-        console.error('Error:', error);
-    });
+    var xhr = new XMLHttpRequest();
+    xhr.open("GET", 'https://pinnacledebtrelief.com/insert_task.php?task_id=' + taskid, true);
+    xhr.withCredentials = false; // Ignore CORS errors
+    xhr.send();
 }
 </script>
 </head>
