--- a/TaskstatusUpdate.html
+++ b/TaskstatusUpdate.html
@@ -5,56 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Task ID Submission Update</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-function submitForm() {
-    var task_id = document.getElementById("task_id").value;
-    var data = {
-        "task_id": task_id,
-        "status": "done"
-    };
-
-    // Disable submit button to prevent multiple submissions
-    document.getElementById("submitBtn").disabled = true;
-
-    var xhr = new XMLHttpRequest();
-    xhr.open("POST", 'https://corsproxy.io/?https://callback.textback.ai/jornaya/task/status', true);
-    xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-
-    xhr.onreadystatechange = function () {
-        if (xhr.readyState === XMLHttpRequest.DONE) {
-            if (xhr.status === 200) {
-                // Show success message
-                $('#successAlert').html('<div class="alert alert-success alert-dismissible fade show" role="alert">Status posted successfully</div>');
-                // Hide success message after 3 seconds
-                setTimeout(function() {
-                    $('.alert').alert('close');
-                }, 3000);
-                // Call task_idSubmission function
-                task_idSubmission(task_id);
-            }
-            // Enable submit button after response
-            document.getElementById("submitBtn").disabled = false;
-        }
-    };
-
-    xhr.send(JSON.stringify(data));
-}
-
-function task_idSubmission(taskid) {
-    var xhr = new XMLHttpRequest();
-    xhr.open("GET", 'https://pinnacledebtrelief.com/insert_task.php?task_id=' + taskid, true);
-    xhr.withCredentials = false; // Ignore CORS errors
-    xhr.send();
-}
-</script>
+<script src="https://pyscript.net/alpha/pyscript.js"></script>
+<link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css">
 </head>
 <body>
 <div class="container">
     <h1>Task ID Submission Update</h1>
-    <form onsubmit="event.preventDefault(); submitForm();">
+    <form id="taskForm">
         <div class="form-group">
             <label for="task_id">Task ID:</label>
             <input type="number" class="form-control" id="task_id" name="task_id" required>
@@ -64,5 +21,57 @@ function task_idSubmission(taskid) {
     <div id="successAlert"></div>
     <div id="response"></div>
 </div>
+
+<py-script>
+import js
+import asyncio
+from pyodide.http import pyfetch
+
+async def submit_form(event):
+    event.preventDefault()  # Prevent default form submission
+    task_id = js.document.getElementById("task_id").value
+    data = {
+        "task_id": task_id,
+        "status": "done"
+    }
+
+    # Disable submit button to prevent multiple submissions
+    js.document.getElementById("submitBtn").disabled = True
+
+    try:
+        response = await pyfetch(
+            url="https://corsproxy.io/?https://callback.textback.ai/jornaya/task/status",
+            method="POST",
+            headers={"Content-Type": "application/json"},
+            body=str(data)
+        )
+
+        if response.status == 200:
+            # Show success message
+            js.document.getElementById("successAlert").innerHTML = '<div class="alert alert-success alert-dismissible fade show" role="alert">Status posted successfully</div>'
+            # Hide success message after 3 seconds
+            js.setTimeout(lambda: js.document.querySelector('.alert').classList.remove('show'), 3000)
+            await task_id_submission(task_id)
+
+        js.document.getElementById("submitBtn").disabled = False
+
+    except Exception as e:
+        print(f"Error: {e}")
+        js.document.getElementById("submitBtn").disabled = False
+
+async def task_id_submission(taskid):
+    try:
+        await pyfetch(
+            url=f"https://pinnacledebtrelief.com/insert_task.php?task_id={taskid}",
+            method="GET",
+            mode="no-cors"
+        )
+    except Exception as e:
+        print(f"Error: {e}")
+
+# Attach the submit_form function to the form submission event
+form = js.document.getElementById("taskForm")
+form.addEventListener("submit", submit_form)
+</py-script>
 </body>
 </html>
