--- a/syx_leadposting.html
+++ b/syx_leadposting.html
@@ -40,45 +40,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
           <div class="form-group">
             <label for="caller_id">Phone (without +1)</label>
             <input type="text" class="form-control" id="caller_id" placeholder="Phone" required>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="alt_phone">Alternate Phone (without +1)</label>
-            <input type="text" class="form-control" id="alt_phone" placeholder="Alternate Phone">
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Email" required>
-          </div>
-        </div>
+      
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="address1">Address</label>
-            <input type="text" class="form-control" id="address1" placeholder="Address" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="address2">Address 2</label>
-            <input type="text" class="form-control" id="address2" placeholder="Address 2">
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="city">City</label>
-            <input type="text" class="form-control" id="city" placeholder="City" required>
-          </div>
-        </div>
-      </div>
+   
       <div class="row">
         <div class="col-md-4">
           <div class="form-group">
@@ -153,40 +123,17 @@
           </div>
         </div>
       </div>
+     
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
           <div class="form-group">
-            <label for="gender">Gender</label>
-            <select class="form-control" id="gender" required>
-              <option value="">Select Gender</option>
-              <option value="Male">Male</option>
-              <option value="Female">Female</option>
-              <option value="Other">Other</option>
-            </select>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="entry_date">Original Lead Submit Date</label>
-            <input type="datetime-local" class="form-control" id="entry_date" placeholder="Original Lead Submit Date" required>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="list_id">Traffic Source Agent ID</label>
-            <input type="text" class="form-control" id="list_id" placeholder="Traffic Source Agent ID">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="lead_id">Traffic Source Lead ID</label>
-            <input type="text" class="form-control" id="lead_id" placeholder="Traffic Source Lead ID" >
+            <label for="jornaya_leadid">Jornaya Leadid</label>
+            <input type="text" class="form-control" id="jornaya_leadid" placeholder="Enter Jornaya Leadid here" >
           </div>
         </div>
       </div>
       <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
+      <br>
     </form>
     <div id="alertContainer"></div>
   </div>
