Update and rename syx_leadposting.html to NexGenius_tdposting.html

--- a/NexGenius_tdposting.html
+++ b/NexGenius_tdposting.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Api TD Form</h2>
+    <h2 class="text-center">NexGenius Api TD Form</h2>
     <form id="leadForm">
       <div class="row">
         <div class="col-md-6">
