--- a/provoice_tpt_bathroom.html
+++ b/provoice_tpt_bathroom.html
@@ -157,7 +157,7 @@
                 <label for="call_recording_url">Recording URL</label>
                 <input type="text" class="form-control" id="call_recording_url" name="call_recording_url" required placeholder="http://">
             </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
     </form>
  <div id="alertContainer"></div>
   </div>
