--- a/provoice_tpt_roof.html
+++ b/provoice_tpt_roof.html
@@ -122,7 +122,7 @@
 <div class="col-md-6">
 <div class="form-group">
                 <label for="landing_page">Landing Page URL</label>
-                <input type="text" class="form-control" id="landing_page" name="landing_page" required placeholder="Enter Landing page URL">
+                <input type="text" class="form-control" id="landing_page" name="landing_page" required value="https://myhomerevamp.com/roofing/">
             </div>
 </div>
 <div class="col-md-6">
