--- a/debt_liveTransfer_TD.html
+++ b/debt_liveTransfer_TD.html
@@ -17,13 +17,13 @@
         <div class="col-md-6">
           <div class="form-group">
             <label for="first_name">First Name</label>
-            <input type="text" class="form-control" id="first_name" placeholder="First Name" required>
+            <input type="text" class="form-control" id="first_name" placeholder="First Name here" required>
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group">
             <label for="last_name">Last Name</label>
-            <input type="text" class="form-control" id="last_name" placeholder="Last Name" required>
+            <input type="text" class="form-control" id="last_name" placeholder="Last Name here" required>
           </div>
         </div>
       </div>
