--- a/provoice_JornayaAndTF.html
+++ b/provoice_JornayaAndTF.html
@@ -19,12 +19,11 @@
 <body>
   <div class="container container-custom text-center">
     <h1>Joryana & TF Request Form</h1>
-<br>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="row">
-
       <div class="col-md-4">
         <a href="http://144.126.132.18:5001/Form_windows.html" class="btn btn-primary btn-block btn-block-custom">Windows</a>
       </div>
@@ -33,6 +32,14 @@
       </div>
       <div class="col-md-4">
         <a href="http://144.126.132.18:5001/Form_bathroom.html" class="btn btn-info btn-block btn-block-custom">Bathroom</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="http://144.126.132.18:5001/Form_kitchen.html" class="btn btn-warning btn-block btn-block-custom">Kitchen</a>
+      </div>
+      <div class="col-md-4">
+        <a href="http://144.126.132.18:5001/Form_hvac.html" class="btn btn-danger btn-block btn-block-custom">HVAC</a>
       </div>
     </div>
   </div>
