--- a/provoice_ClientApiPostingForm.html
+++ b/provoice_ClientApiPostingForm.html
@@ -34,6 +34,14 @@
       background: linear-gradient(45deg, #2ebf91, #8360c3);
       color: white;
     }
+    .btn-kitchen {
+      background: linear-gradient(45deg, #ff7e5f, #feb47b);
+      color: white;
+    }
+    .btn-hvac {
+      background: linear-gradient(45deg, #00c6ff, #0072ff);
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -48,6 +56,14 @@
       </div>
       <div class="col-md-4 mb-4">
         <a href="https://dk495.github.io/DailerWebForms/provoice_tpt_bathroom.html" class="btn btn-block btn-block-custom btn-bathroom">Bathroom</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <a href="https://dk495.github.io/DailerWebForms/provoice_tpt_kitchen.html" class="btn btn-block btn-block-custom btn-kitchen">Kitchen</a>
+      </div>
+      <div class="col-md-4 mb-4">
+        <a href="https://dk495.github.io/DailerWebForms/provoice_tpt_hvac.html" class="btn btn-block btn-block-custom btn-hvac">HVAC</a>
       </div>
     </div>
   </div>
