--- a/up_id_TD_MVA_june.html
+++ b/up_id_TD_MVA_june.html
@@ -59,8 +59,13 @@
   </div>
 
   <div class="row">
-
-    <div class="col-md-12">
+  <div class="col-md-4">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="john@example.com" required>
+      </div>
+    </div>
+    <div class="col-md-8">
       <div class="form-group">
         <label for="zipcode">Zipcode</label>
         <input type="text" class="form-control" id="zip" placeholder="5 digit" required>
