--- a/up_pm_td_MVA.html
+++ b/up_pm_td_MVA.html
@@ -193,8 +193,8 @@
     </div>
     <div class="col-md-4">
 <div class="form-group">
- <label for="ip_address">Incident date</label>
-         <input type="date" class="form-control" id="incident_date" name="incident_date" required placeholder="Date of incident" >
+ <label for="ip_address">Incident date (MM-DD-YYYY)</label>
+         <input type="text" class="form-control" id="incident_date" name="incident_date" required placeholder="MM-DD-YYYY" >
    </div>
   </div>
     <div class="col-md-4">
