--- a/up_id_TD_MVA_june.html
+++ b/up_id_TD_MVA_june.html
@@ -65,10 +65,21 @@
         <input type="email" class="form-control" id="email" placeholder="john@example.com" required>
       </div>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-4">
       <div class="form-group">
         <label for="zipcode">Zipcode</label>
         <input type="text" class="form-control" id="zip" placeholder="5 digit" required>
+      </div>
+    </div>
+     <div class="col-md-4">
+      <div class="form-group">
+        <label for="has_smartphone">Has Smartphone?</label>
+        <select class="form-control" id="has_smartphone">
+          <option value="Yes">Yes</option>
+<option value="No">No</option> 
+          
+               
+        </select>
       </div>
     </div>
   </div>
