--- a/JK_ringba_rtb.html
+++ b/JK_ringba_rtb.html
@@ -23,13 +23,13 @@
       </div>
       <div class="row">
 <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn1">118 ACA RTB Dynamic inbounds</button>
+          <button type="button" class="btn btn-primary" id="btn1">118 ACA RTB Dynamic</button>
         </div>
         <div class="col-md-2">
           <button type="button" class="btn btn-primary" id="btn2">137 ACA Static</button>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn3">142 ACA RTB Inbounds</button>
+          <button type="button" class="btn btn-primary" id="btn3">142 ACA RTB </button>
         </div>
         <div class="col-md-2">
           <button type="button" class="btn btn-primary" id="btn4">162 ACA 10s RTB {BOEING}</button>
