--- a/JK_ringba_rtb.html
+++ b/JK_ringba_rtb.html
@@ -35,7 +35,7 @@
           <button type="button" class="btn btn-primary" id="btn4">162 ACA 10s RTB {BOEING}</button>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn5">119 ACA Spanish | RTB | Dynamic</button>
+          <button type="button" class="btn btn-primary" id="btn5">119 ACA | RTB | Dynamic</button>
         </div>
       </div>
     </form>
