--- a/JK_ringba_rtb.html
+++ b/JK_ringba_rtb.html
@@ -23,19 +23,19 @@
       </div>
       <div class="row">
 <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn1">118 ACA RTB Dynamic</button>
+          <button type="button" class="btn btn-primary" id="btn1">118 ACA</button>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn2">137 ACA Static</button>
+          <button type="button" class="btn btn-primary" id="btn2">137 ACA</button>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn3">142 ACA RTB </button>
+          <button type="button" class="btn btn-primary" id="btn3">142 ACA</button>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn4">162 ACA 10s RTB {BOEING}</button>
+          <button type="button" class="btn btn-primary" id="btn4">162 ACA</button>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary" id="btn5">119 ACA | RTB | Dynamic</button>
+          <button type="button" class="btn btn-primary" id="btn5">119 ACA</button>
         </div>
       </div>
     </form>
