--- a/tldcrm_posting_aca.html
+++ b/tldcrm_posting_aca.html
@@ -129,8 +129,8 @@
   
  <div class="row">
     <div class="col-md-4">
- <label for="age">Age</label>
-         <input type="text" class="form-control" id="age" name="age"  required>
+ <label for="dob">DOB</label>
+         <input type="date" class="form-control" id="dob" name="dob"  required>
    </div>
   </div>
 
