--- a/33_pingpost.html
+++ b/33_pingpost.html
@@ -41,18 +41,18 @@
       <div class="form-group">
         <label for="phone_home">Select Vertical</label>
         <select class="form-control" name="verticals" id="verticals">
-  <option value="tQKPuQrWF1ThTIwB">Bathroom</option>
-  <option value="VwkV7GdIuNVuhVs6">Deck</option>
-  <option value="IiZB2MM3a3drfwT4">Flooring</option>
-  <option value="kDZbghP9SzvuQiT2">Garage Door</option>
-  <option value="mGE7c3W0tvkGRa16">HVAC</option>
-  <option value="FfGm9edwWOrse7Lv">Plumbing</option>
-  <option value="SDr8b30ebrZkJBpJ">Roofing</option>
-  <option value="vhH1fS8mc7UszDAl">Siding</option>
-  <option value="W75uVvzBAph1XQWt">Walk-in Tubs</option>
-  <option value="Drwa2Hzo8UUZVz6N">Water damage</option>
-  <option value="ZpAnMiwCPo2BZhIZ">Windows</option>
-          <option value="MeTCea5RzwdXDmuO">Pest Control</option>
+  <option value="FRyDQHErOrkYeW5i">Bathroom</option>
+  
+  <option value="LJA2FtBWT1FyCIXo">Flooring</option>
+  <option value="i5XrKCK6UIRE1B79">Garage Door</option>
+  <option value="kxfyhbAq3pIZxsnr">HVAC</option>
+  <option value="iZP7GgnyVrT9CaMs">Plumbing</option>
+  <option value="7KDbapLbv7nEsJcg">Roofing</option>
+  <option value="qZb1GoaRtLEK0zYh">Kitchen</option>
+ 
+  <option value="pI5RgV4C9WaMaLxP">Water damage</option>
+  <option value="baWDgQtQyfX4WwCR">Windows</option>
+          <option value="DGVKDtba3osgKv5t">Pest Control</option>
 </select>
       </div>
 <div class="row">
