--- a/provoice_tpt_kitchen.html
+++ b/provoice_tpt_kitchen.html
@@ -150,6 +150,10 @@
                 <label for="jornaya_lead_id">Jornaya Lead ID:</label>
                 <input type="text" class="form-control" id="jornaya_lead_id" name="jornaya_lead_id" required placeholder="Enter Jornaya Lead ID">
             </div>
+       <div class="form-group">
+                <label for="call_recording_url">Recording URL</label>
+                <input type="text" class="form-control" id="call_recording_url" name="call_recording_url" required placeholder="http://">
+            </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
  <div id="alertContainer"></div>
