--- a/up_id_TD_MVA_june.html
+++ b/up_id_TD_MVA_june.html
@@ -99,7 +99,15 @@
 <div class="col-md-6">
     <div class="form-group">
       <label for="incident_date">Incident date</label>
-      <input type="date" class="form-control" id="incident_date" name="incident_date" required>
+      
+      <select class="form-control" id="incident_date">
+          <option value="Within 1 Year">Within 1 Year</option>
+          <option value="Within 2 Years">Within 2 Years</option> 
+        <option value="Within 3 Years">Within 3 Years</option>
+          <option value="Within 4 Years">Within 4 Years</option> 
+        <option value="Within 5 Years">Within 5 Years</option>
+          <option value="Within 6 Years">Within 6 Years</option> 
+        <option value="Greater Than 6 Years">Greater Than 6 Years</option> 
     </div>
   </div>
 </div>
@@ -129,8 +137,9 @@
       <div class="form-group">
         <label for="police_report">Police Report</label>
         <select class="form-control" id="police_report">
+          <option value="false">False</option>   
           <option value="true">True</option>
-          <option value="false">False</option>      
+             
         </select>
       </div>
     </div>
