--- a/up_id_TD_MVA_june.html
+++ b/up_id_TD_MVA_june.html
@@ -108,6 +108,7 @@
         <option value="Within 5 Years">Within 5 Years</option>
           <option value="Within 6 Years">Within 6 Years</option> 
         <option value="Greater Than 6 Years">Greater Than 6 Years</option> 
+      </select>
     </div>
   </div>
 </div>
