--- a/up_id_TD_MVA_june.html
+++ b/up_id_TD_MVA_june.html
@@ -138,8 +138,8 @@
       <div class="form-group">
         <label for="police_report">Police Report</label>
         <select class="form-control" id="police_report">
-          <option value="false">False</option>   
-          <option value="true">True</option>
+          <option value="No">No</option>   
+          <option value="Yes">Yes</option>
              
         </select>
       </div>
