--- a/Smartsellers_TD_ACA_dpt_july_d11.html
+++ b/Smartsellers_TD_ACA_dpt_july_d11.html
@@ -71,8 +71,8 @@
     <div class="form-group">
        <label for="state">Gender</label>
               <select class="form-control" id="gender" required>
-  <option value="Male">Male</option>
-  <option value="Female">Female</option>
+  <option value="M">Male</option>
+  <option value="F">Female</option>
 </select>
 </div>
 </div>
