--- a/smartlead_ringbaApi.html
+++ b/smartlead_ringbaApi.html
@@ -72,6 +72,14 @@
    </div>
   </div>
 </div>
+      <div class="row">
+    <div class="col-md-12">
+<div class="form-group">
+ <label for="landing_page">Landing Page URL</label>
+         <input type="text" class="form-control" id="landing_page" name="landing_page" placeholder="https://" required>
+   </div>
+  </div>
+</div>
 
   <div class="row">
     <div class="col-md-12">
