--- a/smartlead_ringbaApi.html
+++ b/smartlead_ringbaApi.html
@@ -76,7 +76,7 @@
     <div class="col-md-12">
 <div class="form-group">
  <label for="landing_page">Landing Page URL</label>
-         <input type="text" class="form-control" id="landing_page" name="landing_page" placeholder="https://" required>
+         <input type="text" class="form-control" id="landing_page" name="landing_page" value="https://masstortadvisors.com/zantac" placeholder="https://" required>
    </div>
   </div>
 </div>
