--- a/smartlead_ringbaApi.html
+++ b/smartlead_ringbaApi.html
@@ -67,8 +67,8 @@
    <div class="row">
     <div class="col-md-12">
 <div class="form-group">
- <label for="jornaya_leadid">Jornaya Leadid</label>
-         <input type="text" class="form-control" id="jornaya_leadid" name="jornaya_leadid" placeholder="Jornaya LeadID generated at the website." required>
+ <label for="trusted_form">Trusted Form</label>
+         <input type="text" class="form-control" id="trusted_form" name="trusted_form" placeholder="Trusted form cert URL here" required>
    </div>
   </div>
 </div>
