--- a/JbotFoam_ind.html
+++ b/JbotFoam_ind.html
@@ -36,6 +36,8 @@
                     <h1 class="mb-4">Jornaya Request Form</h1>
                     <a href="http://149.102.156.162:5000/acaForm.html" class="btn btn-primary btn-block-custom">ACA FORM</a>
                     <a href="http://149.102.156.162:5000/debtForm.html" class="btn btn-success btn-block-custom">DEBT FORM</a>
+                     <a href="http://149.102.156.162:5000/disability_Jform.html" class="btn btn-primary btn-block-custom">Disability FORM</a>
+        
                 </div>
             </div>
         </div>
