--- a/up_ret_mva.html
+++ b/up_ret_mva.html
@@ -185,7 +185,7 @@
             
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="trusted_form_cert_url">Trusted Form Cert URL/label>
+                    <label for="trusted_form_cert_url">Trusted Form Cert URL</label>
                     <input type="text" class="form-control" id="trusted_form_cert_url" name="trusted_form_cert_url" placeholder="https://" >
                 </div>
                 <div class="form-group col-md-6">
