--- a/hi_gm_tdposting.html
+++ b/hi_gm_tdposting.html
@@ -150,7 +150,11 @@
       </div>
          </div>
            </div>
-
+<div class="form-group">
+        <label for="jornaya_leadid">Jornaya Leadid</label>
+        <input type="text" class="form-control" id="jornaya_leadid placeholder="Enter Leadid Token" required>
+      </div>
+           </div>
 
 
 
