Update and rename hi_gm_tdposting.html to medtd_hiApi.html

--- a/medtd_hiApi.html
+++ b/medtd_hiApi.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Lead Submission Form Hibpo</title>
+  <title>Lead Submission Form</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     body {
