--- a/medtd_hiApi.html
+++ b/medtd_hiApi.html
@@ -152,7 +152,7 @@
            </div>
 <div class="form-group">
         <label for="jornaya_leadid">Jornaya Leadid</label>
-        <input type="text" class="form-control" id="jornaya_leadid placeholder="Enter Leadid Token" required>
+        <input type="text" class="form-control" id="jornaya_leadid" placeholder="Enter Leadid Token" required>
       </div>
          
 
