--- a/up_routingapi_mva.html
+++ b/up_routingapi_mva.html
@@ -89,19 +89,19 @@
            <div class="col-md-12">
           <div class="form-group">
             <label for="address">Address</label>
-            <input type="url" class="form-control" id="address" placeholder="st no. 1" required>
+            <input type="text" class="form-control" id="address" placeholder="st no. 1" required>
           </div>
         </div>
           <div class="col-md-12">
           <div class="form-group">
             <label for="source_url">Source URL</label>
-            <input type="url" class="form-control" id="source_url" placeholder="https://" required>
+            <input type="text" class="form-control" id="source_url" placeholder="https://" required>
           </div>
         </div>
         <div class="col-md-12">
           <div class="form-group">
             <label for="jornaya_leadid">Jornaya Leadid</label>
-            <input type="url" class="form-control" id="jornaya_leadid" placeholder="Jornaya Token here" required>
+            <input type="text" class="form-control" id="jornaya_leadid" placeholder="Jornaya Token here" required>
           </div>
         </div>
        
