--- a/provoice_JornayaAndTF.html
+++ b/provoice_JornayaAndTF.html
@@ -45,6 +45,11 @@
         <a href="http://144.126.132.18:5001/Form_homeInsurance.html" class="btn btn-info btn-block btn-block-custom">Home Insurance</a>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="http://144.126.132.18:5001/Form_homeWarranty.html" class="btn btn-success btn-block btn-block-custom">Home Warranty</a>
+      </div>
+    </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
