--- a/provoice_azure_bathroom.html
+++ b/provoice_azure_bathroom.html
@@ -143,7 +143,7 @@
                 <input type="text" class="form-control" id="call_recording" name="call_recording" required placeholder="http://">
             </div>
 
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
     </form>
  <div id="alertContainer"></div>
   </div>
