--- a/provoice_azure_gutter.html
+++ b/provoice_azure_gutter.html
@@ -131,7 +131,7 @@
 <div class="col-md-6">
           <div class="form-group">
 <label for="gutters_​service">Gutters ​Service</label>
-<select class="form-control" name="gutters_​service" id="gutters_​service" required>
+<select class="form-control" name="gutters_​service" id="gutters_service" required>
     <option value="Install">Install</option>
     <option value="Replace">Replace</option>
     <option value="Repair">Repair</option>
@@ -142,7 +142,7 @@
 <div class="col-md-6">
           <div class="form-group">
 <label for="gutters_​material">Gutters ​Material</label>
-<select class="form-control" name="gutters_​material" id="gutters_​material" required>
+<select class="form-control" name="gutters_material" id="gutters_material" required>
   <option value="Copper">Copper</option>
   <option value="Galvanized">Galvanized</option>
   <option value="PVC">PVC</option>
