--- a/pro_TD_pingpost_auto.html
+++ b/pro_TD_pingpost_auto.html
@@ -53,13 +53,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+       
+ <div class="col-md-4">
           <div class="form-group">
             <label for="caller_id">Phone (ex: 7123456789)</label>
             <input type="text" class="form-control" id="caller_id" placeholder="Phone" required>
           </div>
         </div>
-      
+       <div class="col-md-4">
+          <div class="form-group">
+            <label for="caller_id">Phone Number (10 digits)</label>
+            <input type="text" class="form-control" id="primary_phone" placeholder="ex: 7123456789" required>
+          </div>
+        </div>
 <div class="col-md-4">
           <div class="form-group">
 <label for="city">City</label>
@@ -151,9 +157,172 @@
 </div>
 </div>
 </div>
-
 <div class="row">
-                <div class="col-md-12">
+<div class="col-md-3">
+<div class="form-group">
+<label for="dob">DOB</label>
+            <input type="date" class="form-control" id="dob" required>
+</div>
+</div>
+<div class="col-md-3">
+<div class="form-group">
+<label for="marital_status">Marital Status:</label>
+<select id="marital_status" class="form-control">
+    <option value="widowed">Widowed</option>
+    <option value="separated">Separated</option>
+    <option value="divorced">Divorced</option>
+    <option value="married">Married</option>
+    <option value="single">Single</option>
+</select>
+</div>
+</div>
+<div class="col-md-3">
+<div class="form-group">
+<label for="gender">Gender:</label>
+<select id="gender" class="form-control">
+    <option value="F">Female</option>
+    <option value="M">Male</option>
+</select>
+</div>
+</div>
+
+<div class="col-md-3">
+<div class="form-group">
+<label for="residence_status">Residence Status:</label>
+<select id="residence_status" class="form-control">
+    <option value="own">Own</option>
+    <option value="rent">Rent</option>
+    <option value="live_with_parents">Live With Parents</option>
+    <option value="dormitory">Dormitory</option>
+    <option value="choice_not_listed">Choice Not Listed</option>
+</select>
+</div>
+</div>
+</div>
+<div class="row">
+<div class="col-md-3">
+<div class="form-group">
+<label for="driver1_relationship_to_applicant">Driver 1 Relationship To Applicant:</label>
+<select id="driver1_relationship_to_applicant" class="form-control">
+    <option value="other">Other</option>
+    <option value="self">Self</option>
+    <option value="spouse">Spouse</option>
+    <option value="parent">Parent</option>
+    <option value="sibling">Sibling</option>
+    <option value="child">Child</option>
+    <option value="grandparent">Grandparent</option>
+    <option value="grandchild">Grandchild</option>
+</select>
+</div>
+</div>
+<div class="col-md-3">
+<div class="form-group">
+<label for="driver1_credit_rating">Driver 1 Credit Rating:</label>
+<select id="driver1_credit_rating" class="form-control">
+    <option value="excellent">Excellent</option>
+    <option value="good">Good</option>
+    <option value="fair">Fair</option>
+    <option value="poor">Poor</option>
+</select>
+</div>
+</div>
+<div class="col-md-3">
+<div class="form-group">
+<label for="driver1_sr22_required">Driver SR22 Required:</label>
+<select id="driver1_sr22_required" class="form-control">
+    <option value="true">Yes</option>
+    <option value="false">No</option>
+</select>
+</div>
+</div>
+<div class="col-md-3">
+          <div class="form-group">
+            <label for="state">Driver License State</label>
+              <select class="form-control" id="driver1_license_state" required>
+  <option value="">Select State</option>
+  <option value="AL">Alabama</option>
+  <option value="AK">Alaska</option>
+  <option value="AZ">Arizona</option>
+  <option value="AR">Arkansas</option>
+  <option value="CA">California</option>
+  <option value="CO">Colorado</option>
+  <option value="CT">Connecticut</option>
+  <option value="DE">Delaware</option>
+  <option value="DC">District Of Columbia</option>
+  <option value="FL">Florida</option>
+  <option value="GA">Georgia</option>
+  <option value="HI">Hawaii</option>
+  <option value="ID">Idaho</option>
+  <option value="IL">Illinois</option>
+  <option value="IN">Indiana</option>
+  <option value="IA">Iowa</option>
+  <option value="KS">Kansas</option>
+  <option value="KY">Kentucky</option>
+  <option value="LA">Louisiana</option>
+  <option value="ME">Maine</option>
+  <option value="MD">Maryland</option>
+  <option value="MA">Massachusetts</option>
+  <option value="MI">Michigan</option>
+  <option value="MN">Minnesota</option>
+  <option value="MS">Mississippi</option>
+  <option value="MO">Missouri</option>
+  <option value="MT">Montana</option>
+  <option value="NE">Nebraska</option>
+  <option value="NV">Nevada</option>
+  <option value="NH">New Hampshire</option>
+  <option value="NJ">New Jersey</option>
+  <option value="NM">New Mexico</option>
+  <option value="NY">New York</option>
+  <option value="NC">North Carolina</option>
+  <option value="ND">North Dakota</option>
+  <option value="OH">Ohio</option>
+  <option value="OK">Oklahoma</option>
+  <option value="OR">Oregon</option>
+  <option value="PA">Pennsylvania</option>
+  <option value="RI">Rhode Island</option>
+  <option value="SC">South Carolina</option>
+  <option value="SD">South Dakota</option>
+  <option value="TN">Tennessee</option>
+  <option value="TX">Texas</option>
+  <option value="UT">Utah</option>
+  <option value="VT">Vermont</option>
+  <option value="VA">Virginia</option>
+  <option value="WA">Washington</option>
+  <option value="WV">West Virginia</option>
+  <option value="WI">Wisconsin</option>
+  <option value="WY">Wyoming</option>
+</select>
+        </div>
+</div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+<div class="form-group">
+        <label for="vehicle1_year">Vehicle 1 Year</label>
+        <input type="number" id="vehicle1_year" name="vehicle1_year" class="form-control" placeholder="ex: 2024" min="1900" max="2200" required>
+    </div>
+</div>
+    <div class="col-md-4">
+<div class="form-group">
+        <label for="vehicle1_make">Vehicle 1 Make</label>
+        <input type="text" id="vehicle1_make" class="form-control" placeholder="ex: Honda" name="vehicle1_make" required>
+    </div>
+</div>
+    <div class="col-md-4">
+<div class="form-group">
+        <label for="vehicle1_model">Vehicle 1 Model</label>
+        <input type="text" id="vehicle1_model" class="form-control" placeholder="ex: Civic" name="vehicle1_model" required>
+    </div>
+</div>
+</div>
+<div class="row">
+<div class="col-md-4">
+<div class="form-group">
+<label for="original_lead_submit_date">Date Original Lead Submitted</label>
+            <input type="date" class="form-control" id="original_lead_submit_date" required>
+</div>
+</div>
+                <div class="col-md-8">
           <div class="form-group">
             <label for="jornaya_leadid">Jornaya Leadid</label>
             <input type="text" class="form-control" id="jornaya_leadid" placeholder="Jornaya Leadid Token" required>
