--- a/provoice_home_bill.html
+++ b/provoice_home_bill.html
@@ -787,7 +787,7 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="landingPage">Landing Page</label>
-                    <input type="url" class="form-control" id="landingPage" name="landingPage" required>
+                    <input type="url" class="form-control" id="landingPage" name="landingPage" value="https://myhomerevamp.com/" readonly>
                 </div>
                
                 <div class="form-group col-md-12">
