--- a/pro_TD_pingpost_auto.html
+++ b/pro_TD_pingpost_auto.html
@@ -180,8 +180,8 @@
 <div class="form-group">
 <label for="gender">Gender:</label>
 <select id="gender" class="form-control">
-    <option value="F">Female</option>
-    <option value="M">Male</option>
+    <option value="Female">Female</option>
+    <option value="Male">Male</option>
 </select>
 </div>
 </div>
@@ -230,8 +230,8 @@
 <div class="form-group">
 <label for="driver1_sr22_required">Driver SR22 Required:</label>
 <select id="driver1_sr22_required" class="form-control">
-    <option value="true">Yes</option>
-    <option value="false">No</option>
+    <option value="Yes">Yes</option>
+    <option value="No">No</option>
 </select>
 </div>
 </div>
@@ -359,7 +359,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://dk495.github.io/ApiJS/pro_TD_pingpost_auto.js"></script>
+  <script src="https://dk495.github.io/ApiJS/Pro_td_auto_pingpost.js"></script>
 
     
 
