--- a/pro_TD_pingpost_auto.html
+++ b/pro_TD_pingpost_auto.html
@@ -161,7 +161,7 @@
 <div class="col-md-3">
 <div class="form-group">
 <label for="dob">DOB</label>
-            <input type="date" class="form-control" id="dob" required>
+            <input type="datetime-local" class="form-control" id="dob" required>
 </div>
 </div>
 <div class="col-md-3">
