--- a/pro_TD_pingpost_auto.html
+++ b/pro_TD_pingpost_auto.html
@@ -161,7 +161,7 @@
 <div class="col-md-3">
 <div class="form-group">
 <label for="dob">DOB</label>
-            <input type="datetime-local" class="form-control" id="dob" required>
+            <input type="date" class="form-control" id="dob" required>
 </div>
 </div>
 <div class="col-md-3">
@@ -319,7 +319,7 @@
 <div class="col-md-4">
 <div class="form-group">
 <label for="original_lead_submit_date">Date Original Lead Submitted</label>
-            <input type="date" class="form-control" id="original_lead_submit_date" required>
+            <input type="datetime-local" class="form-control" id="original_lead_submit_date" required>
 </div>
 </div>
                 <div class="col-md-8">
