--- a/SmartSellers_TD_ACA_nov.html
+++ b/SmartSellers_TD_ACA_nov.html
@@ -140,8 +140,8 @@
 
 <div class="col-md-6">
     <div class="form-group">
-      <label for="dob">DOB (YYYY-MM-DD)</label>
-      <input type="date" class="form-control"  id="dob" name="dob" placeholder="YYYY-MM-DD" required>
+      <label for="dob">DOB (MM-DD-YYYY)</label>
+      <input type="text" class="form-control"  id="dob" name="dob" placeholder="MM-DD-YYYY" required>
     </div>
 </div>
 <div class="col-md-6">
