--- a/pro_TD_pingpost_auto.html
+++ b/pro_TD_pingpost_auto.html
@@ -330,7 +330,7 @@
         </div>
    <div class="col-md-4">
           <div class="form-group">
-             <label for="state">Driver License State</label>
+             <label for="state">Insurance Company</label>
       <select id="insurance_company" class="form-control">
             <option value="AAA">AAA</option>
             <option value="ALLSTATE">ALLSTATE</option>
